# vocabloom

./: .firebaserc  .gitignore  DEPLOYMENT.md  README.md  deploy-backend.sh  deploy-frontend.sh  deploy.sh  migrate_production_db.sh  reset_user_quota.py  run_vocabloom.sh  setup-domain.sh  setup_local_db.sh
.github/workflows/: ci.yml
client/: .eslintrc.json  .firebaserc  .gitignore  .prettierrc  env.example  firebase.json  index.html  package-lock.json  package.json
client/.firebase/: hosting.ZGlzdA.cache
client/src/: App.vue  design-system.css  design-tokens.css  firebase.ts  main.ts  style.css
client/src/components/: AboutPage.vue  AuthModal.vue  ConfirmationModal.vue  DiscoverPage.vue  FlashcardDashboard.vue  FlashcardModal.vue  FlashcardViewer.vue  FlipCard.vue  ForgotPasswordPage.vue  HelloWorld.vue  HomePage.vue  ImageGenerationModal.vue  MyImagesPage.vue  MyStoriesPage.vue  MyWordsPage.vue  NotificationToast.vue  SignUpModal.vue  StoryGenerationModal.vue  UserAvatar.vue  UserPreferencesPage.vue  UserProfile.vue
client/src/constants/: languages.ts
client/src/stores/: auth.ts  discover.ts  flashcards.ts  images.ts  notification.ts  preferences.ts  quota.ts  stories.ts  theme.ts  translations.ts
docs/: gcs-setup.md  implementation-tasks.md  product-requirements.md  technical-design.md  ui-spec.md  ux-spec.md
server/: .flake8  Dockerfile  README.md  SECURITY.md  add_target_language_migration.py  alembic.ini  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.sh  setup_gcs.py  sync_dependencies.py  test_local_template.py
server/alembic/: env.py
server/alembic/versions/: 67871b7ba687_initial_migration.py  82f3c02d9a9f_initial_migration.py
server/app/: auth.py  caching.py  crud.py  database.py  main.py  models.py  redis_quota.py  schemas.py  secrets.py  storage.py
server/app/routes/: auth.py  cache.py  discover.py  flashcards.py  images.py  preferences.py  quota.py  stories.py  translate.py  translations.py  words.py
server/vocabloom_server/: main.py
